style: avoid overflows

--- a/src/modules/page/PageHeader.module.css
+++ b/src/modules/page/PageHeader.module.css
@@ -7,7 +7,7 @@
 }
 
 .logo {
-  max-width: 192px;
+  max-width: 208px;
 }
 
 @media (min-width: 480px) {
